--- a/_data/entries.yml
+++ b/_data/entries.yml
@@ -57,3 +57,11 @@
 - title: "We can rebuild him"
   link: "https://github.com/msporny/dna/pull/1"
   type: "pull request"
+
+- title: "Lamp stack"
+  link: "https://github.com/thoughtbot/liftoff/pull/178#issuecomment-57690259"
+  type: "comment"
+
+- title: "Recursion (vs GOTO)"
+  link: "https://github.com/igorw/retry/issues/3"
+  type: "issue"
