--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
 # Site settings
 title: Github Hall Of Fame
 email: mehul.kar@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Sometimes Github is awesome
-baseurl: "" # the subpath of your site, e.g. /blog/
+description: Sometimes Github is awesome
+baseurl: "/github-hall-of-fame/"
 twitter_username: mehulkar
 github_username:  mehulkar
 
