Remove unnecessary trailing backslash

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Github Hall Of Fame
 email: mehul.kar@gmail.com
 description: Sometimes Github is awesome
-baseurl: "/github-hall-of-fame/"
+baseurl: "/github-hall-of-fame"
 twitter_username: mehulkar
 github_username:  mehulkar
 
