Add PR to rename sexmachine to gender_detector
This PR is a really great example of when things were about to become hairy and terrible,
but then @bmuller made some calm, reasonable choices. 

This is a great example of why we CAN have nice things.

--- a/_data/entries.yml
+++ b/_data/entries.yml
@@ -69,3 +69,7 @@
 - title: "First .NET Pull Request"
   link: "https://github.com/dotnet/corefx/pull/31"
   type: "pull request"
+
+- title: "It could have been a flame war"
+  link: "https://github.com/bmuller/gender_detector/pull/14"
+  type: "pull request"
