Deleted, because of police

--- a/_data/entries.yml
+++ b/_data/entries.yml
@@ -89,3 +89,7 @@
 - title: "Paul Irish perf audits reddit mobile"
   link: "https://github.com/reddit/reddit-mobile/issues/247"
   type: "issue"
+
+- title: "Deleted, because of police"
+  link: "https://archive.is/r8k7X#30.1%"
+  type: "issue"
