--- a/_data/entries.yml
+++ b/_data/entries.yml
@@ -93,3 +93,7 @@
 - title: "Deleted, because of police"
   link: "https://archive.is/r8k7X#30.1%"
   type: "issue"
+
+- title: "HTTP/2 Spec"
+  link: "https://github.com/http2/http2-spec/commit/ac468f3fab9f7092a430eedfd69ee1fb2e23c944"
+  type: "commit"
