--- a/_data/entries.yml
+++ b/_data/entries.yml
@@ -93,3 +93,7 @@
 - title: "Deleted, because of police"
   link: "https://archive.is/r8k7X#30.1%"
   type: "issue"
+  
+- title: "What happens when a recruiter posts in a github issue"
+  link: "https://github.com/thoughtbot/liftoff/pull/178#issuecomment-57727728"
+  type: "issue"
