--- a/_data/entries.yml
+++ b/_data/entries.yml
@@ -93,3 +93,7 @@
 - title: "Deleted, because of police"
   link: "https://archive.is/r8k7X#30.1%"
   type: "issue"
+
+- title: "Removed use of gendered pronoun"
+  link: "https://github.com/joyent/libuv/pull/1015#issuecomment-29538615"
+  type: "pull request"
