--- a/_data/entries.yml
+++ b/_data/entries.yml
@@ -93,3 +93,7 @@
 - title: "Deleted, because of police"
   link: "https://archive.is/r8k7X#30.1%"
   type: "issue"
+  
+- title: "Some performance tweaks"
+  link: "https://github.com/bitly/dablooms/pull/19"
+  type: "pull request"
