Linked only the PR instead of a specific comment

--- a/_data/entries.yml
+++ b/_data/entries.yml
@@ -103,5 +103,5 @@
   type: "pull request"
 
 - title: "Two bots chatting to each other"
-  link: "https://github.com/ampproject/amphtml/pull/484#issuecomment-146279527"
+  link: "https://github.com/ampproject/amphtml/pull/484"
   type: "pull request"
